# feeds-to-readeck

./: .gitignore  Cargo.toml  README.md  flake.nix
benches/: feed_parsing.rs
src/: feed.rs  lib.rs  main.rs  readeck.rs
systemd-examples/: README.md  feeds-to-readeck.service  feeds-to-readeck.timer
