[package]
name = "feeds-to-readeck"
version = "0.0.1"
authors = ["SardonicPelican", "Francis Gagné <fragag1@gmail.com>"]
edition = "2024"
description = "Sends items from your RSS and Atom feeds to your Readeck list. (forked from FraGag's feeds-to-pocket)"
repository = "https://github.com/SardonicPelican/feeds-to-readeck"
readme = "README.md"
keywords = ["atom", "feed", "readeck", "rss", "syndication"]
license = "MIT/Apache-2.0"
exclude = [".envrc", ".github", "flake.lock", "flake.nix"]

[dependencies]
atom_syndication = "0.12.9"
clap = { version = "4.6.1", features = ["derive"] }
quick-error = "2.0.1"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
rss = "2.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
divan = { version = "5.0.1", package = "codspeed-divan-compat" }

[[bench]]
name = "feed_parsing"
harness = false
